--- a/VeiligWonenNewUI/VeiligWonenNewUI/Register.resx
+++ b/VeiligWonenNewUI/VeiligWonenNewUI/Register.resx
@@ -117,31 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="SCIDcol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="WijkCol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="HcatCol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="sCatCol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="per2013.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="per2014.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="per2015.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="per2016.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Register_Btn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQgAAAA6CAYAAABMM8ftAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAJjSURBVHhe7d0xS1ZRHMDhGpKENJNagqC5odEpmgKnoG/R
+        EM0NfYqWNse2tnzrNaOQEqqhyKmSCBtEQ+Qcv8DpPVdLxfNv1/sMz3TPvXc6P+4958I9lVIqAC0CAYQE
+        AggJBBASCCAkEEDov4HY2E5lbjWV2eVcrr/J5eJCLqfngeOszuM6n2++y+Xx91TWttrzvwoD8fRnKtOj
+        C00O2zcBjrtUJoY7ZWo0xx99bXfgSCBqTW6/z91J7YsCJ83Uwk6ZWcrl2+/DPTgUiBqHK4u5jA1S8yLA
+        yVbn/8pmEIj65CAO0G91feJIIOqag9cK4NyoAw++HAhE3a2oC5KtwUD/TI8i8XF9LxB1q6OuZrYGAv1z
+        ZuTe57wbiLofWrc8WgOBfrr6ai8Ql1+2BwD9dWawF4jx5+0BQL91gWgdABAIICQQQEgggJBAACGBAEIC
+        AYQEAggJBBASCCAkEEBIIICQQAAhgQBCAgGEBAIICQQQEgggJBBASCCAkEAAIYEAQgIBhAQCCAkEEOoC
+        UX+x1ToI9FsXiIt+/Q80dIGYWWofBPqr/tS7C8TDlVTGX7QHAX2Uyp0Pe4FY2UzlwrA1COij88Od8uRH
+        2g1Edf9zLhOeIqD3xga53FrOXRf+BWJjO5Vrr0cDnh09AeiPSwu5rG3tduFfIKqP63Y0oM+mh7nMr+03
+        4VAgqsVfqVxZzOWsbyOgN8YGqXtyOBiH6kggqvq6cfdTLlPdwqUvLeEkmxzN8xtv918rDmoG4q9ak7rV
+        MWnxEk6c8ee5zC7nMrfanv/VfwMB9JtAACGBAEICAYQEAgik8geb9hk1HHJz2gAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="Exit_btn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAZZJREFUaEPt
@@ -152,6 +144,38 @@
         J3Kn8DSByNgQ9C0Vli4Q2XQy0bj7NwpLE4hseg9849qw956/EjmJml7idI5PB8T7l7svg2+HX5nryGDp
         PIk28Qrh5Y2DhNeO8YeIiYf9uh7EhmANhQxLF/GOZIaAkBUb+0KOiXcwZtQhIH6GhtP/gwa2ZWPtZuf7
         fPAkthB/qaVhYEM0fu4j3sFc1sAgF3INy6T/rWIYhmEYhjF5suwTpUfnrsLFUEkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAJUSURBVGhD7ZrLahRRGITH20Opm9nrTlszF9AYnYUx3kBiNJFBECGKuBFBRAOuBBe+hys3PkHy
+        AIKLQEz0O1gHmuZ0Tx9X1cN8UDRMTkFV/33JTHdvwYJmxuPxndFotMv2O9uz+ribUOIFJf5EDYfDfT47
+        pz93Cwpsl8tEhVJsz2tZN2AKj6pFKvrFmjNa7g1hH1bCJ8WkvsniCyHXU+Fr9EM2TziEHiRC1+mQ9Rdk
+        9YNwW4nQdTpgkoWsfhBuMxG6Tofoiqx+5JZhksuy+kHAx5XATTqi/IqsfrCnZ91nyjpCa7L6QbiNUtg2
+        uiurH4RrddOMYpL3ZfUj86YZymzJ6gdlbhMynAvJ8FWx/qmsfvxHmWey+kHANdS6DHouqx+cA7cImFNm
+        W1Y/CLeKcsq8wXbsn9sMwt1EOWXeYpubMu+w2Za5iH6XwjaKq9mXfr9/UnY/CLlbDd2gr5PJ5JSsnhBy
+        rxK6SZ+KojghqyeEzDrk0MfpdHpcdk8IGUodlELP0ueuTCqn1I79pLiCFQRtXYr1H+xL8a/PJcK2LsX6
+        99g870mR3FLI90YbIeRllHP4vZbVF0IuEbb1JZ3JvpLVF0pdJWz4oTBZIqGXsvrCnl8maOtS7ATfr+KR
+        3FLoiay+EPIaypnUpqy+EHKFsDmT2pDVFw6/6wTNmdS6rL6oVNtvuWGd7+/cEULeUNhUiarCulVZfWFS
+        8/NIMhLOkUT4Onk/NI4QdH4e60c4nObnxYsIE7iXKBL0czAYnNaybpEo1d0yEQ6t8HrZHtvuv162YCa9
+        3l8j+2hhhGUz9gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAJUSURBVGhD7ZrLahRRGITH20Opm9nrTlszF9AYnYUx3kBiNJFBECGKuBFBRAOuBBe+hys3PkHy
+        AIKLQEz0O1gHmuZ0Tx9X1cN8UDRMTkFV/33JTHdvwYJmxuPxndFotMv2O9uz+ribUOIFJf5EDYfDfT47
+        pz93Cwpsl8tEhVJsz2tZN2AKj6pFKvrFmjNa7g1hH1bCJ8WkvsniCyHXU+Fr9EM2TziEHiRC1+mQ9Rdk
+        9YNwW4nQdTpgkoWsfhBuMxG6Tofoiqx+5JZhksuy+kHAx5XATTqi/IqsfrCnZ91nyjpCa7L6QbiNUtg2
+        uiurH4RrddOMYpL3ZfUj86YZymzJ6gdlbhMynAvJ8FWx/qmsfvxHmWey+kHANdS6DHouqx+cA7cImFNm
+        W1Y/CLeKcsq8wXbsn9sMwt1EOWXeYpubMu+w2Za5iH6XwjaKq9mXfr9/UnY/CLlbDd2gr5PJ5JSsnhBy
+        rxK6SZ+KojghqyeEzDrk0MfpdHpcdk8IGUodlELP0ueuTCqn1I79pLiCFQRtXYr1H+xL8a/PJcK2LsX6
+        99g870mR3FLI90YbIeRllHP4vZbVF0IuEbb1JZ3JvpLVF0pdJWz4oTBZIqGXsvrCnl8maOtS7ATfr+KR
+        3FLoiay+EPIaypnUpqy+EHKFsDmT2pDVFw6/6wTNmdS6rL6oVNtvuWGd7+/cEULeUNhUiarCulVZfWFS
+        8/NIMhLOkUT4Onk/NI4QdH4e60c4nObnxYsIE7iXKBL0czAYnNaybpEo1d0yEQ6t8HrZHtvuv162YCa9
+        3l8j+2hhhGUz9gAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
